--- a/thesis/appa.tex
+++ b/thesis/appa.tex
@@ -1,4 +1,4 @@
-\chapter{Alignment Visualization of K.525}\label{appb}
+\chapter{Alignment Visualization of K.525}\label{appa}
 \clearpage
 
 \begin{figure}[H]
